# ws_aic

./: .gitignore  README.md  pyproject.toml
scripts/: aggregate_seating_demos.py  build_gce_base_image.sh  build_v18.sh  build_v23.sh  build_v25.sh  build_v26.sh  build_v27.sh  build_v28.sh  build_v29.sh  build_v30.sh  build_v31.sh  build_v32.sh  build_v33.sh  build_v34.sh  build_v35.sh  build_v36.sh  build_v37.sh  build_v38.sh  build_v39.sh  build_v9.sh  collect_demos.py  collect_demos_gazebo.py  collect_demos_v25.py  dagger.py  eval_dinov2_act.py  eval_policy.py  gcp_build.sh  gcp_eval.sh  insert.py  inspect_episode.py  iter_pipeline.sh  iter_v11.sh  merge_demos.py  modal_collect_demos.py  modal_diag.py  modal_dind_spike.py  modal_eval.py  post_bulk_train_v38.sh  post_bulk_train_v39.sh  precompute_scripted_traj.py  (+7 more)
src/aic/aic_example_policies/: setup.py
src/aic/aic_utils/aic_mujoco/: mujoco_obs.py
src/aic/docker/: docker-compose.yaml
src/aic/docker/aic_model/: Dockerfile  Dockerfile.v11  Dockerfile.v18  Dockerfile.v2  Dockerfile.v23  Dockerfile.v25  Dockerfile.v26  Dockerfile.v27  Dockerfile.v28  Dockerfile.v29  Dockerfile.v3  Dockerfile.v30  Dockerfile.v31  Dockerfile.v32  Dockerfile.v33  Dockerfile.v34  Dockerfile.v35  Dockerfile.v36  Dockerfile.v37  Dockerfile.v38  Dockerfile.v39  Dockerfile.v4  Dockerfile.v40  Dockerfile.v41  Dockerfile.v42  Dockerfile.v43  Dockerfile.v44  Dockerfile.v5  Dockerfile.v6  Dockerfile.v7  Dockerfile.v8  Dockerfile.v9  entrypoint_fixed.sh  entrypoint_v3.sh  entrypoint_v4.sh  entrypoint_v5.sh  (+2 more)
tests/: test_v39_state_and_filter.py
(+21 files in other folders)
