[project]
name = "ws-aic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.4.1",
    "mujoco>=3.6.0",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pycollada>=0.9.3",
    "torch>=2.11.0",
    "trimesh>=4.11.3",
]
